src/test/ui/feature-gates/feature-gate-rustdoc_internals.stderr
error[E0658]: `#[doc(keyword)]` is meant for internal use only
  --> $DIR/feature-gate-rustdoc_internals.rs:1:1
   |
LL | #[doc(keyword = "match")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #90418 <https://github.com/rust-lang/rust/issues/90418> for more information
   = help: add `#![feature(rustdoc_internals)]` to the crate attributes to enable

error[E0658]: `#[doc(fake_variadic)]` is meant for internal use only
  --> $DIR/feature-gate-rustdoc_internals.rs:7:1
   |
LL | #[doc(fake_variadic)]
   | ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #90418 <https://github.com/rust-lang/rust/issues/90418> for more information
   = help: add `#![feature(rustdoc_internals)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
